FC and ide warning fix
1. fix force close issue
2. setup min sdk version to 9
3. clean build warning